Se culmina desarrollo

--- a/OnOffBack/appsettings.json
+++ b/OnOffBack/appsettings.json
@@ -4,7 +4,7 @@
     "Port": "587",
     "User": "correo@gmail.com",
     "Password": "contrasena",
-    "domain": "https://localhost:3000/"
+    "domain": "http://localhost:3000/"
   },
   "Logging": {
     "LogLevel": {
